YINY-40: Solved transparency issue but not overlapping issue.

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -160,6 +160,7 @@ body {
   }
 
   .navbar-offcanvas-bottom {
+    background: #28589C;
     bottom: 0;
     margin-bottom: 0;
   }
